--- a/aptitude/static/css/styles.css
+++ b/aptitude/static/css/styles.css
@@ -7,12 +7,15 @@
 .picture img{
 	max-width: 100%;
 }
+.small-text{
+	font-size: .8em;
+}
 .picture span{
 	position: absolute;
 	bottom: 0;
 	left: 0;
 	padding: .2em 1em;
-	font-size: .8em;
+	
 	background-color: rgba(255,255,255,.5);
 	display: inline-block;
 }
@@ -23,7 +26,7 @@ h1{
 }
 
 dl{
-	font-size: .8em;
+	margin-bottom: 0.5em
 }
 dt dt{
 	font-weight: bold;
@@ -36,7 +39,9 @@ dt{
 dt:after{
 	content: ':';
 }
-
+.progress-bar{
+	cursor: pointer;
+}
 .aptitude{
 	clear:both;
 }
@@ -52,4 +57,38 @@ dt:after{
 	margin-bottom: 20px;
 	font-size: .8em;
 	float: left;
+}
+.social-networks{
+	clear:both;
+	margin:0;
+	padding:0;
+}
+.unstyled{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+.social-networks li,
+.people li{
+	display:inline-block;
+	font-size: 1.2em;
+}
+.people li{
+	margin-right: 5px
+}
+.people{
+	margin-top: .5em
+}
+.people img{
+	max-width: 45px;
+}
+.social-networks li span{
+padding: 5px 8px;
+}
+.clear{
+	clear:both;
+}
+.vote{
+	position: relative;
+	bottom: -2px;
 }
