--- a/aptitude/templates/profile.html
+++ b/aptitude/templates/profile.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 	<div class="row">
-	<div class="col-md-2">
-		<div class="picture">
+	<div class="col-md-2 small-text">
+		<div class="picture thumbnail">
 		<img src="https://pbs.twimg.com/profile_images/378800000613334751/94f948347b9ec15471b0828827ff27e9.jpeg">
 		<span>
 		{{username}}
@@ -16,16 +16,30 @@
 			<dd><a href="#">rauljimenez.info</a></dd>
 			<dt>Redes</dt>
 			<dd>
-				<ul>
+				<ul class="social-networks">
 					<li>
-						<a href="#">Twit</a>
+						<a href="#"><span class="icon-linkedin btn btn-primary"></span></a>
 					</li>
 					<li>
-						<a href="#">FB</a>
+						<a href="#"><span class="icon-facebook btn btn-primary"></span></a>
+					</li>
+					<li>
+						<a href="#"><span class="icon-github btn btn-primary"></span></a>
 					</li>
 				</ul>
 			</dd>
 		</dl>
+		<ul class="unstyled">
+			
+			<li>
+				<a href="#"><span class="icon-globe"></span></a>
+				Obtener widget
+			</li>
+			<li>
+				<a href="#"><span class="icon-share"></span></a>
+				Compartir perfil
+			</li>
+		</ul>
 	</div>
 	<div class="col-md-5">
 		<h1>Conocimientos</h1>
@@ -41,8 +55,9 @@
 					<span class="name">{{ a.name }}</span>
 				</div>
 		    {% endfor %}
+		    <p class="small-text clear"><a href="#">+ conocimientos</a></p>
 		{% else %}
-		    <p>No polls are available.</p>
+		    <p>No hay aptitudes.</p>
 		{% endif %}
 		
 		
@@ -50,6 +65,65 @@
 	</div>
 	<div class="col-md-5">
 		<h1>Actitudes</h1>
+		{% if aptitudes %}
+		    {% for a in aptitudes %}
+		        <div class="aptitude">
+					<div class="progress progress-striped">
+					  <div class="progress-bar progress-bar-{% cycle "success" "info" "warning" "danger" %}" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%" data-toggle="tooltip" data-placement="bottom" title="Mucho">
+					    <span class="sr-only">80% Complete (success)</span>
+					  </div>
+
+					</div>
+					<span class="name">{{ a.name }}</span>
+				</div>
+		    {% endfor %}
+		    <p class="small-text clear"><a href="#">+ actitudes</a></p>
+		{% else %}
+		    <p>No hay aptitudes.</p>
+		{% endif %}
 	</div>
 </div>
+<div class="row">
+	<div class="col-md-offset-2 col-md-10 small-text panel panel-default">
+	<div class=" panel-body">
+	Este perfil ha sido generado como el promedio de la imagen que tienen *24* personas de Raúl Jiménez Ortega.
+	<ul class="people unstyled">
+		<li> 
+			<a href="#"><img src="https://pbs.twimg.com/profile_images/378800000613334751/94f948347b9ec15471b0828827ff27e9.jpeg"></a>
+		</li>
+		<li> 
+			<a href="#"><img src="https://pbs.twimg.com/profile_images/378800000613334751/94f948347b9ec15471b0828827ff27e9.jpeg"></a>
+		</li>
+		<li> 
+			<a href="#"><img src="https://pbs.twimg.com/profile_images/378800000613334751/94f948347b9ec15471b0828827ff27e9.jpeg"></a>
+		</li>
+		<li> 
+			<a href="#"><img src="https://pbs.twimg.com/profile_images/378800000613334751/94f948347b9ec15471b0828827ff27e9.jpeg"></a>
+		</li>
+		<li> 
+			<a href="#"><img src="https://pbs.twimg.com/profile_images/378800000613334751/94f948347b9ec15471b0828827ff27e9.jpeg"></a>
+		</li>
+		<li> 
+			<a href="#"><img src="https://pbs.twimg.com/profile_images/378800000613334751/94f948347b9ec15471b0828827ff27e9.jpeg"></a>
+		</li>
+		<li> 
+			<a href="#"><img src="https://pbs.twimg.com/profile_images/378800000613334751/94f948347b9ec15471b0828827ff27e9.jpeg"></a>
+		</li>
+		<li> 
+			<a href="#"><img src="https://pbs.twimg.com/profile_images/378800000613334751/94f948347b9ec15471b0828827ff27e9.jpeg"></a>
+		</li>
+		<li> 
+			<a href="#"><img src="https://pbs.twimg.com/profile_images/378800000613334751/94f948347b9ec15471b0828827ff27e9.jpeg"></a>
+		</li>
+		<li> 
+			<a href="#"><img src="https://pbs.twimg.com/profile_images/378800000613334751/94f948347b9ec15471b0828827ff27e9.jpeg"></a>
+		</li>
+		<li>
+		<a href="https://github.com/designmodo/Flat-UI/archive/master.zip" class="btn btn-primary btn-lg btn-block vote">Vota</a>
+		</li>
+		</ul>
+		</div>
+	</div>
+</div>
+
 {% endblock %}
