--- a/aptitude/templates/header.html
+++ b/aptitude/templates/header.html
@@ -18,9 +18,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav pull-right">
         <li class="active">
-          <button type="button" class="btn btn-default navbar-btn">Créate una cuenta</button>
+          <button type="button" class="btn btn-default navbar-btn" data-toggle="modal" data-target="#register">Créate una cuenta</button>
         </li>
-        <li><a href="#">Entrar</a></li>
+        <li><a href="#" data-toggle="modal" data-target="#login">Entrar</a></li>
         
       </ul>
     </div><!-- /.navbar-collapse -->
