--- a/aptitude/templates/profile.html
+++ b/aptitude/templates/profile.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-
+{% load staticfiles %}
 {% block content %}
-	<div class="row">
-	<div class="col-md-2 small-text">
+	<div class="row" ng-app="user" ng-controller="UserCtrl as userCtrl">
+	<div class="col-md-2 small-text" >
 		<div class="picture thumbnail">
 		<img src="https://pbs.twimg.com/profile_images/378800000613334751/94f948347b9ec15471b0828827ff27e9.jpeg">
 		<span>
@@ -10,9 +10,9 @@
 		</span>
 		</div>
 		<dl>
-			<dt>Ciudad</dt>
-			<dd>Madrid</dd>
-			<dt>Web</dt>
+			<dt>Ciudad {% verbatim {%} {{user.otro}}{% endverbatim {%}</dt>
+			<dd>Madrid </dd>
+			<dt>Web </dt>
 			<dd><a href="#">rauljimenez.info</a></dd>
 			<dt>Redes</dt>
 			<dd>
@@ -43,44 +43,11 @@
 	</div>
 	<div class="col-md-5">
 		<h1>Conocimientos</h1>
-		{% if aptitudes %}
-		    {% for a in aptitudes %}
-		        <div class="aptitude">
-					<div class="progress progress-striped">
-					  <div class="progress-bar progress-bar-{% cycle "success" "info" "warning" "danger" %}" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-					    <span class="sr-only">80% Complete (success)</span>
-					  </div>
-
-					</div>
-					<span class="name">{{ a.name }}</span>
-				</div>
-		    {% endfor %}
-		    <p class="small-text clear"><a href="#">+ conocimientos</a></p>
-		{% else %}
-		    <p>No hay aptitudes.</p>
-		{% endif %}
-		
-		
-		
+		<feature-list info="actitudes"></feature-list>
 	</div>
 	<div class="col-md-5">
 		<h1>Actitudes</h1>
-		{% if aptitudes %}
-		    {% for a in aptitudes %}
-		        <div class="aptitude">
-					<div class="progress progress-striped">
-					  <div class="progress-bar progress-bar-{% cycle "success" "info" "warning" "danger" %}" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%" data-toggle="tooltip" data-placement="bottom" title="Mucho">
-					    <span class="sr-only">80% Complete (success)</span>
-					  </div>
-
-					</div>
-					<span class="name">{{ a.name }}</span>
-				</div>
-		    {% endfor %}
-		    <p class="small-text clear"><a href="#">+ actitudes</a></p>
-		{% else %}
-		    <p>No hay aptitudes.</p>
-		{% endif %}
+		<feature-list info="aptitudes"></feature-list>
 	</div>
 </div>
 <div class="row">
@@ -125,5 +92,8 @@
 		</div>
 	</div>
 </div>
+
+<script src="{% static 'js/profile.js' %}"></script>
+
 
 {% endblock %}
